Alignment Fixes And Sidebar Rates From API

--- a/src/static/scss/layout.scss
+++ b/src/static/scss/layout.scss
@@ -8,21 +8,24 @@
     border-right: 0.5px solid #e7e7e7;
     background: white;
     .profile {
-      padding: 30px 50px 0 50px;
+      padding: 40px 50px 0 50px;
       img {
         width: 60px;
         height: 60px;
         background-color: #f7d7cd;
         border-radius: 6px;
+        margin: auto;
       }
       h5 {
         color: #1b2733;
         margin-bottom: 6px;
+        font-weight: bold;
       }
       h6 {
         color: #637282;
         font-weight: normal;
         line-height: 1;
+        margin: 0;
       }
     }
     .menu-side {
@@ -56,7 +59,7 @@
     }
     .rate-list-wrapper {
       margin-top: auto;
-      max-height: 420px;
+      max-height: 485px;
       .rates-list {
         display: flex;
         flex-direction: column;
@@ -67,8 +70,8 @@
         right: 0;
         overflow-y: auto;
         .coin {
-          height: 105px;
-          min-height: 105px;
+          height: 121px;
+          min-height: 121px;
           display: flex;
           padding: 35px 50px;
           border-top: 0.5px solid #e7e7e7;
